--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<!-- Agrega aquí la estructura HTML de tu sitio web -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Freelancer</title>
+</head>
+
+<body>
+    <header>
+        <nav class="container">
+            <div class="fancy-nav">
+                <li><a href="#" class="text-uppercase">Start Bootstrap</a></li>
+            </div>
+            <div class="nav-logo">
+                <li><a href="#" class="text-uppercase">Portafolio</a></li>
+                <li><a href="#" class="text-uppercase">About</a></li>
+                <li><a href="#" class="text-uppercase">Contact</a></li>
+            </div>
+        </nav>
+    </header>
+
+
+    <script src="https://kit.fontawesome.com/0a534b34f9.js"></script>
+</body>
+
+</html>
