--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <header>
         <nav class="container">
-            <div class="fancy-nav">
+            <div class="fancy-slogan">
                 <li><a href="#" class="text-uppercase">Start Bootstrap</a></li>
             </div>
-            <div class="nav-logo">
+            <div class="nav-list">
                 <li><a href="#" class="text-uppercase">Portafolio</a></li>
                 <li><a href="#" class="text-uppercase">About</a></li>
                 <li><a href="#" class="text-uppercase">Contact</a></li>
@@ -22,6 +22,47 @@
         </nav>
     </header>
 
+    <section class="wrapper">
+        <div>
+            <img src="assets/images/profile.png" alt="img-profile">
+            <h1 class="text-uppercase">Start Bootstrap</h1>
+            <h2>Web Developer-Graphic Artist-User Experience Desinger</h2>
+        </div>
+    </section>
+
+    <section class="fancy-box">
+        <div class="container">
+            <h2 class="text-uppercase">Portafolio</h2>
+
+
+            <div class="fancy-grid fancy-work-grid">
+                <div>
+                    <img src="assets/images/portfolio/cabin.png" alt="work-1">
+                </div>
+
+                <div>
+                    <img src="assets/images/portfolio/cake.png" alt="work-2">
+                </div>
+
+                <div>
+                    <img src="assets/images/portfolio/circus.png" alt="work-3">
+                </div>
+
+                <div>
+                    <img src="assets/images/portfolio/game.png" alt="work-4">
+                </div>
+
+                <div>
+                    <img src="assets/images/portfolio/safe.png" alt="work-5">
+                </div>
+
+                <div>
+                    <img src="assets/images/portfolio/submarine.png" alt="work-6">
+                </div>
+
+            </div>
+        </div>
+    </section>
 
     <script src="https://kit.fontawesome.com/0a534b34f9.js"></script>
 </body>
