--- a/index.html
+++ b/index.html
@@ -15,25 +15,41 @@
                 <li><a href="#" class="text-uppercase">Start Bootstrap</a></li>
             </div>
             <div class="nav-list">
-                <li><a href="#" class="text-uppercase">Portafolio</a></li>
-                <li><a href="#" class="text-uppercase">About</a></li>
-                <li><a href="#" class="text-uppercase">Contact</a></li>
+                <li><a href="#portfolio" class="text-uppercase">Portafolio</a></li>
+                <li><a href="#about" class="text-uppercase">About</a></li>
+                <li><a href="#contact" class="text-uppercase">Contact</a></li>
             </div>
         </nav>
     </header>
 
     <section class="wrapper">
         <div>
-            <img src="assets/images/profile.png" alt="img-profile">
+            <img src="assets/images/profile.png" alt="img-profile">           
             <h1 class="text-uppercase">Start Bootstrap</h1>
-            <h2>Web Developer-Graphic Artist-User Experience Desinger</h2>
+            
+            <div class="fancy-line-divider divider-light">
+                <div class="line"></div>
+                <div class="fancy-icon-star">
+                    <i class="fas fa-star"></i>
+                </div>
+                <div class="line"></div>
+            </div>
+
+            <h2>Web Developer - Graphic Artist - User Experience Desinger</h2>
         </div>
     </section>
 
-    <section class="fancy-box">
+    <section class="fancy-style fancy-box" id="portfolio">
         <div class="container">
             <h2 class="text-uppercase">Portafolio</h2>
 
+            <div class="fancy-line-divider">
+                <div class="line"></div>
+                <div class="fancy-icon-star">
+                    <i class="fas fa-star"></i>
+                </div>
+                <div class="line"></div>
+            </div>
 
             <div class="fancy-grid fancy-work-grid">
                 <div>
@@ -63,6 +79,123 @@
             </div>
         </div>
     </section>
+
+    <section class="fancy-style fancy-box-about" id="about">
+        <div class="container">
+            <h2 class="text-uppercase">About</h2>
+
+            <div class="fancy-line-divider divider-light">
+                <div class="line"></div>
+                <div class="fancy-icon-star">
+                    <i class="fas fa-star"></i>
+                </div>
+                <div class="line"></div>
+            </div>
+
+            <div class="fancy-grid-about">
+                <div class="grid-item">
+                    <p>
+                        Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the
+                        complete
+                        source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy
+                        customization.
+                    </p>
+                </div>
+                <div class="grid-item">
+                    <p>
+                        Whether you're a student looking to showcase your work, a professional looking to attract
+                        clients,
+                        or a
+                        graphic artist looking to share your projects, this template is the perfect starting point!
+                    </p>
+                </div>
+            </div>
+
+            <div class="btn-download">
+                <button><i class="fas fa-download"></i> Download theme</button>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="fancy-style fancy-box-form" id="contact">
+        <div class="container">
+            <h2 class="text-uppercase">Contact me</h2>
+
+            <div class="fancy-line-divider">
+                <div class="line"></div>
+                <div class="fancy-icon-star">
+                    <i class="fas fa-star"></i>
+                </div>
+                <div class="line"></div>
+            </div>
+
+            <div class="box-form">
+                <form>
+                    <div>
+                        <input type="text" placeholder="Name">
+                    </div>
+                    <div>
+                        <input type="email" placeholder="Email Address">
+                    </div>
+                    <div>
+                        <input type="number" placeholder="Phone Number">
+                    </div>
+                    <div>
+                        <textarea placeholder="Message"></textarea>
+                    </div>
+
+                    <div class="btn-send">
+                        <button> Send </button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <footer class="fancy-style">
+        <div class="container">
+            <div class="fancy-grid fancy-work-grid">
+                <div>
+                    <h3 class="text-uppercase">Location</h3>
+                    <p class="fancy-p-footer">
+                        2215 John Daniel Drive
+                        Clark, MO 65243
+                    </p>
+                </div>
+
+                <div>
+                    <h3 class="text-uppercase">Around The Web</h3>
+                    <div class="social-brands">
+                        <a href="#">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-dribbble"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div>
+                    <h3 class="text-uppercase">About Freelancer</h3>
+                    <p class="fancy-p-footer-2">
+                        Freelance is a free to use, MIT licensed Bootstrap theme created by <span>Start
+                            Bootstrap</span>.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="copyright-box">
+            <p>Copyright © Your Website 2020</p>
+        </div>
+    </footer>
 
     <script src="https://kit.fontawesome.com/0a534b34f9.js"></script>
 </body>
