--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/images/star.png" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" href="css/main.css">
     <title>Freelancer</title>
 </head>
